# Goo

./: -P  .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  Goo.py  LICENSE  Makefile  Particle  README.md  _Goo.py  __init__.py  citation.cff  dev.py  genindex.html  goo.py  index.html  index.rst  objects.inv  py-modindex.html  requirements.txt  sample_codes.py  search.html  searchindex.js  setup.cfg  setup.py  test.py  testing.ipynb
.github/: check_hdr_file.py  load_goo.py  make-tests-matrix.py
_goo/: __main__.py  plugin.py  run_pytest.py  utils.py
_modules/: index.html
_notebooks/: 20230512_SOMA.ipynb  20231130_ASCB_RikkiGarner.ipynb  20231227_lineage.ipynb  aggregation.ipynb  division.ipynb  heatmap.ipynb  motion_plot.ipynb  pressure.ipynb  rendering_time.ipynb  visualization.py  volume_control.ipynb
_sources/: index.rst.txt
acknowledgment/: citation.html  contributors.html
addon/: addon_the_blender_way.py  goo_addon.py  goopanel.py
app/: add_cell_controller.py  app.py
credits/: credits_and_citation.html
data/: TEST0_doublet_simulation.json  TEST0_doublet_simulation.txt  TEST11_doublets.json  TEST11_doublets.txt  TEST3_doublet_simulation.json  TEST3_doublet_simulation.txt  TEST4_doublet_simulation.json  TEST4_doublet_simulation.txt  TEST5_doublet_simulation.json  TEST5_doublet_simulation.txt  TEST7_doublets.json  TEST7_doublets.txt  TEST9_doublets.json  TEST9_doublets.txt  cell_so.json  cell_so1.json  cell_so1_time.json  doublet_area.json  doublet_area.txt  doublets_paper.json  doublets_paper.txt  doublets_s-1000f0.json  doublets_s-1000f0.txt  doublets_s-1000f1.json  doublets_s-1000f1.txt  doublets_s-1000f1stiff0damp25.json  doublets_s-1000f1stiff0damp25.txt  doublets_s-1000f1stiff10damp25.json  doublets_s-1000f1stiff10damp25.txt  doublets_s-1000f1stiff1damp0.json  doublets_s-1000f1stiff1damp0.txt  doublets_s-1000f1stiff1damp10.json  doublets_s-1000f1stiff1damp10.txt  doublets_s-1000f1stiff1damp100.json  doublets_s-1000f1stiff1damp100.txt  doublets_s-1000f1stiff1damp200.json  doublets_s-1000f1stiff1damp200.txt  doublets_s-1000f1stiff1damp25visc500.json  doublets_s-1000f1stiff1damp25visc500.txt  doublets_s-1000f1stiff1damp5.json  (+15 more)
developer_guide/: developers.html  learning_resources.html
docs/: .buildinfo  Makefile  blender_sphinx.py  code.html  conf.py  devguide.html  genindex.html  index.html  install_dependencies_blender.py  objects.inv  py-modindex.html  search.html  searchindex.js  summary.html  userguide.html
docs_depreciated/: .buildinfo  code.html  objects.inv  py-modindex.html  summary.html  userguide.html
getting_started/: blender_on_o2.html  example_scripts.html  hardware.html  installation.html  learning_resources.html  purpose.html
goo/: __main__.py  plugin.py
html/: genindex.html  index.html  search.html  searchindex.js
python/: Goo.py  cleavage.py  setup_world.py
scratch/: 0.0 - test_setup.py  0.2 - test_division.py  1 - test_basic_division_simulation.py  2.0 - test_motion.py  2.1 - test_homotypic_adhesions.py  2.2 - test_heterotypic_adhesions.py  2.3 - test_growth.py  2.4 - test_division_physics.py  3.0 - test_growth_motion.py  3.01 - motion_simulations.py  3.2 - test_global_force.py  3.3 - test_yolk.py  4.1 - doublets_diffusion.py  4.1 - doublets_surface copy.py  5_cell_secretion.py  6.0 - gene_recoloring.py  6.1 - gene_repressilator.py  6.2 - gene_test.py  6.3 - test_gene_move.py  9_grn_motion_adhesion.py  cell_adhesion_figure_refactor.py  doublets_adhesion.py  doublets_adhesion_refactor.py  random_cell_mixing.py  reaction_diffusion.ipynb  reaction_diffusion_numba.ipynb  test_division_plane.py
simulations/: 0 - setup_test.py  0 - test_setup.py  0.0 - test_setup.py  0.1 - test_cell.py  0.2 - test_division.py  1 - test_basic_division_simulation.py  1 - test_cell.py  16cell_packing_camera.blend  16cell_packing_camera.blend1  1_homotypic_adhesion_doublets copy.py  1_homotypic_adhesion_doublets.py  1to16cell_divisions.py  2 - test_division.py  2.0 - test_motion.py  2.0 - test_origin_set.py  2.0 - test_setup_physics.py  2.1 - test_adhesion_physics.py  2.1 - test_division_physics.py  2.1 - test_homotypic_adhesions.py  2.2 - test_division_physics.py  2.2 - test_heterotypic_adhesions.py  2.2 - test_origin_set.py  2.3 - test_division_physics.py  2.4 - test_division_heterotypic.py  2.4 - test_division_physics.py  2_randomly_moving_doublets.py  3.0 - test_growth.py  3.0 - test_growth_motion.py  3.1 - test_growth_division.py  3.2 - test_global_force.py  3.4 - test_division_heterotypic.py  3.4 - test_growth_motion.py  3_volume_dividing_cells copy.py  (+91 more)
(+235 files in other folders)
