[metadata]
name = goo
version = 0.0.1
description = Blender Pytest plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smegason/Goo/
author = Sean Megason
author_email = megason@hms.harvard.edu
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://smegason.github.io/Goo/
    GitHub Project = https://github.com/smegason/Goo
    Issue Tracker = https://github.com/smegason/Goo/issues

[options]
package_dir = 
    = scripts/modules
packages = goo:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    goo-cli = goo.main:main
pytest11 =
    goo = goo.plugin

[options.extras_require]
dev =
    black==20.8b1
    bump2version==1.0.1
    flake8==3.9.2
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.9.1
    pre-commit==2.13.0
    pytest
    yamllint==1.26.1
lint =
    black==20.8b1
    flake8==3.9.2
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.9.1
    yamllint==1.26.1
test =
    pytest

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503,
    E731
per-file-ignores =
    tests/conftest.py: E402

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER