[metadata]
name = goo
version = 0.0.1
description = Goo lets you simulate cells with Blender
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smegason/Goo/
author = Sean Megason
author_email = megason@hms.harvard.edu
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://smegason.github.io/Goo/
    GitHub Project = https://github.com/smegason/Goo
    Issue Tracker = https://github.com/smegason/Goo/issues

